# PFE_Mecatronica_Guarise_Trubiano

./: .env  .gitignore  Dockerfile.jupyter  README.md  docker-compose.yml  main.py  requirements.txt
.github/workflows/: main.yml
Custom_HaarCascade/: image_proccessed.py
Emotion-detection/: Emotion_Detection.ipynb  pyproject.toml  videotester.py
Haar_Cascade/: model.py
config/: __init__.py
detect_mouth_open/: facerec_from_webcam_mouth_open.py
logs/: metrics
models/: fatigue_detection_model.h5
pruebas/: EDA.ipynb  NN_test.ipynb  pandas_cluster_features.ipynb
pruebas/Custom_HaarCascade/: image_proccessed.py
pruebas/detect_mouth_open/: facerec_from_webcam_mouth_open.py  facial_features_outputs.txt  mouth_open_algorithm.py
pruebas/detect_mouth_open/gists/: mouth_open_algorithm_part1.py  mouth_open_algorithm_part2.py  mouth_open_algorithm_part3.py
src/: AlertSystem.py  FacialFeaturesExtractionSystem.py  FatigueDetectionSystem.py  Pose_Estimation_Module.py  face_geometry.py  landmarks_model.py  model_test.py  process_images.py  real_time.py  utils.py
